# korrektor

./: .gitignore  .gitmodules  .prettierignore  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  readme.md  turbo.json
.fleet/: run.json
.github/workflows/: backend.yml  frontend.yml
daftar/: .gitignore  package.json  pnpm-lock.yaml
daftar/components/: Hello.tsx
daftar/pages/: index.tsx
daftar/pages/api/: hello.ts
daftar/styles/: Home.module.css
daftar/utils/: fetcher.ts
qalam/: .gitignore  Cargo.toml  package.json
qalam/.fleet/: run.json
qalam/qalam-cli/: Cargo.toml
qalam/qalam-cli/src/: data.rs  env.rs  figlet  main.rs  sample.env  skin.rs  statics.rs  tutorial.md
qalam/qalam-db/: Cargo.toml
qalam/qalam-http/: Cargo.toml
qalam/qalam-http/src/: init.rs  lib.rs  main.rs
qalam/qalam-view/: Cargo.toml
qalam/qalam-view/src/: auth.rs  error.rs  lib.rs  request.rs  stats.rs
qalam/qalam-view/src/private/: correct.rs  mod.rs  transliterate.rs
qalam/qalam-view/src/tools/: alphabetic.rs  mod.rs  number.rs  tokenize.rs
qalam/qalam-view/src/utils/: duplicate.rs  frequency.rs  mod.rs
qalam/src/: main.rs
