[package]
name = "qalam-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
clap = { version = "4.1.6", features = ["derive"] }
dotenv = "0.15.0"
termimad = "0.21.0"
qalam-http = { path = "../qalam-http" }
reqwest = { version = "0.11", features = ["blocking", "json"] }
zip = "0.6.4"
