[package]
name = "qalam"
version = "1.0.1"
edition = "2021"
homepage = "https://api.korrektor.uz"
documentation = "https://docs.korrektor.uz"
repository = "https://github.com/uzinfocom-org/korrektor"
description = "Qalam REST API for Uzbek language"
authors = ["Uzinfocom Open Source <cctld@uzinfocom.uz>"]
keywords = ["korrektor", "qalam", "uzbek"]
readme = "readme.md"
license = "GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
clap = { version = "4.1.6", features = ["derive"] }
dotenv = "0.15.0"
termimad = "0.21.0"
qalam-http = { path = "../qalam-http" }

