[package]
name = "qalam-http"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
actix-web = "4"
peak_alloc = "0.1.0"
env_logger = "0.10.0"
actix-web-httpauth = "0.8.0"
qalam-view = { path = "../qalam-view" }
actix-cors = "0.6.4"

