[package]
name = "qalam-http"
version = "1.0.1"
edition = "2021"
homepage = "https://api.korrektor.uz"
documentation = "https://docs.korrektor.uz"
repository = "https://github.com/uzinfocom-org/korrektor"
description = "Qalam REST API for Uzbek language"
authors = ["Uzinfocom Open Source <cctld@uzinfocom.uz>"]
keywords = ["korrektor", "qalam", "uzbek"]
readme = "readme.md"
license = "GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
actix-web = "4"
peak_alloc = "0.1.0"
env_logger = "0.10.0"
actix-web-httpauth = "0.8.0"
qalam-view = { path = "../qalam-view" }

