[package]
name = "qalam-view"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
peak_alloc = "0.1.0"
actix-files = "0.6.1"
korrektor = "0.2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"