[package]
name = "qalam-view"
version = "1.0.1"
edition = "2021"
homepage = "https://api.korrektor.uz"
documentation = "https://docs.korrektor.uz"
repository = "https://github.com/uzinfocom-org/korrektor"
description = "Qalam REST API for Uzbek language"
authors = ["Uzinfocom Open Source <cctld@uzinfocom.uz>"]
keywords = ["korrektor", "qalam", "uzbek"]
readme = "readme.md"
license = "GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde_json = "1.0"
korrektor = "0.2.3"
peak_alloc = "0.1.0"
actix-files = "0.6.1"
actix-web-httpauth = "0.8.0"
serde = { version = "1.0", features = ["derive"] }
korrektor-rs-private = { path = "../../modules/korrektor-rs-private" }